# templates

.github/workflows/: ci.yml
fastapi-app/: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
fastapi-app/.github/workflows/: ci.yml
fastapi-app/app/: main.py
fastapi-app/app/core/: config.py  dependencies.py
fastapi-app/app/core/config/: __init__.py  app.py  database.py  env.py
fastapi-app/app/core/pagination/: __init__.py  page.py  params.py
fastapi-app/app/core/security/: auth.py
fastapi-app/app/database/: __init__.py  base.py  engine.py  env.py  session.py
fastapi-app/app/database/versions/: 20260526_215644_initial_migration.py  20260531_004344_add_users.py
fastapi-app/app/errors/: __init__.py  user.py
fastapi-app/app/features/users/: models.py  router.py  services.py
fastapi-app/app/models/: __init__.py  user.py
fastapi-app/app/routers/: __init__.py  user.py  users.py
fastapi-app/app/schemas/: __init__.py  users.py
fastapi-app/app/services/: __init__.py  user_service.py
fastapi-app/docs/superpowers/code-reviews/: 2026-06-11-fastapi-template-production-readiness.md  README.md
fastapi-app/http/: http-client.env.json  rest_app.http  rest_users.http
fastapi-app/project_name/: __init__.py
fastapi-app/project_name/app/: main.py
fastapi-app/project_name/app/core/: dependencies.py  uuid.py
fastapi-app/project_name/app/core/config/: app.py  database.py  env.py  settings.py
fastapi-app/project_name/app/core/security/: __init__.py  auth.py
fastapi-app/project_name/app/database/: engine.py  env.py  session.py
fastapi-app/project_name/app/features/users/: __init__.py  errors.py  models.py  router.py  schemas.py  services.py  validators.py
fastapi-app/scripts/: rename_project.sh
fastapi-app/tests/: test_main.py
fastapi-app/tests/app/: conftest.py  test_main.py
fastapi-app/tests/app/core/: test_uuid.py
fastapi-app/tests/app/core/config.py/: test_app.py  test_database.py  test_settings.py
fastapi-app/tests/app/core/security/: test_auth.py
fastapi-app/tests/app/database/: __init__.py  test_base.py  test_engine.py  test_session.py
fastapi-app/tests/app/fakes/: __init__.py
fastapi-app/tests/app/features/users/: constants.py  test_router.py  test_services.py  test_validators.py
fastapi-app/tests/app/models/: test_base.py
fastapi-app/tests/app/routers/: __init__.py  test_users.py
fastapi-app/tests/app/services/: test_user_service.py
fastapi-app/tests/core/: test_config.py
fastapi-app/tests/core/config.py/: test_app.py  test_database.py  test_settings.py
fastapi-app/tests/core/security/: test_auth.py
fastapi-app/tests/database/: test_engine.py  test_session.py
fastapi-app/tests/fakes/: __init__.py  session.py  user.py
fastapi-app/tests/models/: test_base.py
fastapi-app/tests/routers/: test_user.py  test_users.py
fastapi-app/tests/services/: test_user_service.py
strict-python/: .env.example  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
strict-python/.github/workflows/: ci.yml
strict-python/strict_python/: __init__.py  main.py
strict-python/tests/: test_main.py
